--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -23,6 +23,8 @@ For implicit notation, we start with `@` and then we directly have access to val
 <label>@a</label>
 ```
 
+For every changes made on the view, only a refresh of the browser is required. The default behaviour is that __Razor views are compiled at runtime when the view is invoked unless configured otherwise__.
+
 The explicit notation is used with parentheses. It is usefull for simple manipulation:
 
 ```
@@ -34,23 +36,40 @@ The explicit notation is used with parentheses. It is usefull for simple manipul
 <p>Total: @(a + b)</p>
 ```
 
-In the previous two sample we also saw that code blocks can be placed directly into the views using `@{ ... }`.
+In the previous two sample we also saw that code blocks can be placed directly into the views using `@{ ... }`. Code blocks can also be created by control structures like `@if`, `@for` and others. A list can be found in the official razor doc [https://docs.microsoft.com/en-us/aspnet/core/mvc/views/razor](https://docs.microsoft.com/en-us/aspnet/core/mvc/views/razor).
 
-Implicit code block transition
-Write html tag within code block
+In code blocks, we saw that C# code can be written, but we can also add HTML code in the code block.
 
-Explicit code block transition
-Use <text>. Used when no html tag used.
+```
+@{
+    var n = 1;
+    for(var i = 0; i < n; i++)
+    {
+        <p>@i</p>
+    }
+}
+```
 
-Explicit line code block transition
-Use @ on the line to render html
+This is known as an implicit code block transition where html tags are written directly within the code block.
 
-Html within code block is translated to html
+Since code written in code block expect C#, if we want to add normal html text, the IDE will interpret it as C#.
+In order to interpret it as html text we can use `<text>`, also known as explicit code block transition:
 
-For loops
-While loops
-Conditional if else
-Switch case
+```
+@{
+    var personName = "Kim";
+    <text>Name: @personName</text>
+}
+```
+
+Lastly if we have a single line we can use the explicit line code block transition with `@:`. The previous example can be simplified to:
+
+```
+@{
+    var personName = "Kim";
+    @:Name: @personName
+}
+```
 
 2. Templates
 
