--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -5,8 +5,9 @@ Today we will explore some of the features from Razor:
 
 ```
  1. Syntax
- 2. Templates
- 3. Tag helpers
+ 2. Layout and partial views
+ 3. View components
+ 4. Tag helpers
 ```
 
 ## 1. Syntax
@@ -22,6 +23,10 @@ For implicit notation, we start with `@` and then we directly have access to val
 
 <label>@a</label>
 ```
+
+One useful property of the view is the `Model`.
+It gives access to the model linked to the page. By going `@Model.XXX`, we can access the property of the model for display or manipulation purposes. 
+To set the type of the model we can use the special keyword `@model`.
 
 For every changes made on the view, only a refresh of the browser is required. The default behaviour is that __Razor views are compiled at runtime when the view is invoked unless configured otherwise__.
 
@@ -71,26 +76,94 @@ Lastly if we have a single line we can use the explicit line code block transiti
 }
 ```
 
-2. Templates
+## 2. Layout and partial views
 
-Layouts are placed in shared folder with _layout.cshtml
+### Layout
 
-ViewStart.cshtml can be used to place code running before every view.
-For example specifying the layout
+Each view has a `Layout` property. It defines a common layout where view can be put in.
+The main layout is created by the default template `_Layout.cshtml` in the `Shared` folder.
 
-@{ Layout = _layout }
+It is set on all views:
 
-Layout is a property of the view which sets the layout to be used.
+```
+@{ Layout = _Layout }
+```
 
-To use partial views, we can use the Html property of the view which we access using @Html, and for partial we invoke the Partial function of Html @Html.Partial("view", model).
-Here we specified the name as "view" which specify to Razor to search the view in current folder or shared folder.
-If we would have specified "view.cshtml" it would have only searched in the current folder.
+This is specified in the  `ViewStart.cshtml` which is run before each view.
 
-For example the following code:
+In the layout, we call the functions `RenderBody()` and `RenderSection(...)` which are functions to be used by the layout to specify where the view will be placed.
 
-Another property used is @Model which gives access to the model linked to the page. To set the type of the model we can use the special keyword @model.
+For `RenderSection` it is used to render a section defined by the view.
 
-3. Tag helpers
+If in the layout we have the following `RenderSection`:
+
+```
+<body>
+    <div>
+        @RenderBody()
+    </div>
+    @RenderSection("Scripts", false)
+</body>
+```
+
+In the view we would expect the following expression defining the `Scripts` section:
+
+```
+@section Scripts {
+    <script type="text/javascript" src="/app.js"></script>
+}
+```
+
+The `Scripts` section will be inserted where the `@RenderSection` is placed on the layout. 
+
+### Partial views
+
+To use partial views, we can use the `Html` property of the view which we access using `@Html`, and for partial we invoke the `Partial` function:
+
+```
+@Html.Partial("view", model)
+```
+
+Here we specified the name as `view` which specify to Razor to search the view in current folder or shared folder.
+If we would have specified `view.cshtml` it would have only searched in the current folder.
+A model can also be passed to a partial view.
+
+For example we could have a list of `Company`.
+
+```
+public class Company
+{
+    public string Name { get; set; }
+    public string Address { get; set; }
+    public string Description { get; set; }
+}
+```
+
+And have a main page listing the company:
+
+```
+@model IEnumerable<Company>
+
+@foreach (var comp in @Model) { 
+    @Html.Partial("CompanyCard", comp)
+}
+```
+
+But somehow we judged that the piece of display would be a reusable component named `CompanyCard` which could be used in other places.
+And we define in the `/Shared` folder a `CompanyCard.cshtml` which displays the company info:
+
+```
+@model Company
+
+<div class="card">
+    <h1>@Model.Name</h1>
+    <p>@Model.Address</p>
+</div>
+```
+
+## 3. View components
+
+## 4. Tag helpers
 
 One of the latest add-on on Razor are the tag helpers. Tag helpers are HTML tags which take over certain HTML tags and provide attributes which can be filled up in a typesafe way together with intelisense help. When the tag needs to be rendered the tag helper will generate the necessary html tag, the necessary attributes and also add other html tags if required.
 
