--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -165,39 +165,78 @@ And we define in the `/Shared` folder a `CompanyCard.cshtml` which displays the 
 
 ## 4. Tag helpers
 
-One of the latest add-on on Razor are the tag helpers. Tag helpers are HTML tags which take over certain HTML tags and provide attributes which can be filled up in a typesafe way together with intelisense help. When the tag needs to be rendered the tag helper will generate the necessary html tag, the necessary attributes and also add other html tags if required.
+One of the latest add-on on Razor are the tag helpers. Tag helpers are HTML tags which take over certain HTML tags and provide attributes which can be filled up in a typesafe way together with intellisense help. When the tag needs to be rendered the tag helper will generate the necessary html tag, the necessary attributes and also add other html tags if required.
 
-For example we used to have to use @Html.LabelFor to create a label for an input with a dynamic name.
-Now we can use the label tag helper which contains a asp-for attribute.
+For example we used to have to use `@Html.LabelFor` to create a label for a model property input.
+Now we can use the `label` tag helper which contains a `asp-for` attribute.
 
-For example the following form:
+For example the following example, we are using the `form`, `div`, `label` and `input` tag helpers:
 
 ```
+@model Company
+
+<form method="post" asp-controller="Home">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name" type="text" />
+    </div>
+    <button type="submit">Submit</button>
+</form>
 ```
 
 With the following viewmodel and data annotation:
 
 ```
+public class Company
+{
+    [Required]
+    public string Name { get; set; }
+    public string Address { get; set; }
+    public string Description { get; set; }
+}
 ```
 
-Generates the following:
+Generates the following HTML markup:
 
 ```
+<form method="post" action="/Home/companies">
+    <div class="text-danger validation-summary-valid" data-valmsg-summary="true">
+        <ul>
+            <li style="display:none"></li>
+        </ul>
+    </div>
+    <div class="form-group">
+        <label for="Name">Name</label>
+        <input type="text" data-val="true" data-val-required="The Name field is required." id="Name" name="Name" value="">
+    </div>
+    <button type="submit">Submit</button>
+    <input name="__RequestVerificationToken" type="hidden" value="CfDJ8DpoVLSsI-dFmCuXII29cPzMmmt_tFkEOLe9OnmvXItzk_j8lygsGE1Yw2rVDDwLqhLV4HXo7_BgizkVYoyCFB6QaoG4v1xMLnwlZd3_dqeBANt1pOuOa5rq9TiSAEhYFH9iIL75wiVoQwE5KiA9QK8">
+</form>
 ```
 
-Some of the common ones are the form tag helper which has the asp-controller and asp-action add-ons, the label tag helper with asp-for and the input tag helper with asp-for and asp-validation-for.
+We can see that the input has been created with special attributes containing a validation error according to our data annotation. Also we can see that an antiforgery token has been added as `__RequestVerificationToken`. This is automatic when using `form` tag helper.
 
-The select tag helper is also very useful as we can display a selection list for an enumeration:
+As we saw, some of the common tag helpers are the `form` tag helper which has the `asp-controller` and `asp-action` add-ons, the `label` tag helper with `asp-for` and the `input` tag helper with `asp-for` and `asp-validation-for`.
+
+The `select` tag helper is also very useful as we can display a selection list for an enumeration:
 
 ```
-<select asp-for="MyEnumProp" 
-            asp-items="Html.GetEnumSelectList<MyEnum>()"> >
-    </select> 
+public enum Domain
+{
+    Finance,
+    Marketing
+}
+```
+
+```
+<div class="form-group">
+    <label asp-for="Domain">Domain</label>
+    <select asp-for="Domain" asp-items="Html.GetEnumSelectList<Domain>()"></select>
+</div>
 ```
 
 `Html` is a property on the view which gives access to basic functionalities like `GetEnumSelectList` which transforms an enum into a selection list.
 Display attribute can then be used to display a human readable string.
 
-For form fields, a comprehensive list is available in ASP NET core documentation:
-
-[https://docs.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms](https://docs.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms)
+For form fields, a comprehensive list is available in ASP NET core documentation [https://docs.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms](https://docs.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms).
