view component section

--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -163,9 +163,27 @@ And we define in the `/Shared` folder a `CompanyCard.cshtml` which displays the 
 
 ## 3. View components
 
+One of the latest add-on on Razor are the View components. Before we could only have partial views to segment our views. But partial views were limited to pieces of view itself with a model bound to it. So we could only put reusable pieces of html markup together. As we saw in (2), we could have a piece of markup which shows a company card and have that as a reusable partial view.
+But there are times where a __whole piece of the view plus the logic backing the view__ can be segmented and use as a reusable __component__. This is what the view components are.
+
+A view component defines logic in C# through a class inheriting from `ViewComponent` and has a view tight to it.
+
+The view of the component view must be placed in a specific folder for the runtime to discover it. The two locations are:
+
+ - `Views/<controller_name>/Components/<view_component_name>/<view_name>` this is preferable if we want the view component to be available for our controller only.
+ - `Views/Shared/Components/<view_component_name>/<view_name>` this is preferable if we want the view component to be available as a shared component for the whole system.
+
+ The default name of a view of the view component is `Default`. Therefore if within the view component we call `View()` without specifying a view view component name, the `Default` view will be used. 
+
+__View component are NOT controllers. They do NOT substitute controller endpoints. They are simply a separation of a piece of reusable view with the logic to construct the view.__
+
+The main function of the view component is the `InvokeAsync`. The function isn't a requirement from an interface or abstract class, it is called by name convention `InvokeAsync`. Calling by convention makes the function extremely flexible as the parameters are not fixed. The function then accept an arbitrary number of parameters.
+
+
+
 ## 4. Tag helpers
 
-One of the latest add-on on Razor are the tag helpers. Tag helpers are HTML tags which take over certain HTML tags and provide attributes which can be filled up in a typesafe way together with intellisense help. When the tag needs to be rendered the tag helper will generate the necessary html tag, the necessary attributes and also add other html tags if required.
+Another latest add-on on Razor are the tag helpers. Tag helpers are HTML tags which take over certain HTML tags and provide attributes which can be filled up in a typesafe way together with intellisense help. When the tag needs to be rendered the tag helper will generate the necessary html tag, the necessary attributes and also add other html tags if required.
 
 For example we used to have to use `@Html.LabelFor` to create a label for a model property input.
 Now we can use the `label` tag helper which contains a `asp-for` attribute.
