--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -116,6 +116,17 @@ In the view we would expect the following expression defining the `Scripts` sect
 
 The `Scripts` section will be inserted where the `@RenderSection` is placed on the layout. 
 
+`ViewStart` and `ViewImports` are two special files automatically discovered by the runtime.
+`ViewStart` is used to place code which runs before each view, here we talked about setting the layout as example, another typical example would be to set the title of the pages.
+`ViewImports` is used to place all the namespace import, by default we have the current assembly namespace plus the tag helper namespace.
+
+```
+@using RazorTest.Web2
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+```
+
+For the import of tag helpers, `*` means importing all from the `Microsoft.AspNetCore.Mvc.TagHelpers` assembly.
+
 ### Partial views
 
 To use partial views, we can use the `Html` property of the view which we access using `@Html`, and for partial we invoke the `Partial` function:
