explain issue tag helper

--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -269,3 +269,14 @@ public enum Domain
 Display attribute can then be used to display a human readable string.
 
 For form fields, a comprehensive list is available in ASP NET core documentation [https://docs.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms](https://docs.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms).
+
+__Note:__ There is a known problem currently where intellisense for tag helper isn't working. 
+
+```
+Tag Helpers do not work
+Issue: Razor Tag Helpers do not get colorization or special IntelliSense at design time.  They work normally at runtime.
+Workaround: Install the Razor Language Service extension.
+```
+Source: [https://github.com/aspnet/Tooling/blob/master/known-issues-vs2017.md#tag-helpers-do-not-work](https://github.com/aspnet/Tooling/blob/master/known-issues-vs2017.md#tag-helpers-do-not-work)
+
+If it is the case for you, install the VS extension for Razor [https://marketplace.visualstudio.com/items?itemName=ms-madsk.RazorLanguageServices](https://marketplace.visualstudio.com/items?itemName=ms-madsk.RazorLanguageServices).
