--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -190,7 +190,49 @@ __View component are NOT controllers. They do NOT substitute controller endpoint
 
 The main function of the view component is the `InvokeAsync`. The function isn't a requirement from an interface or abstract class, it is called by name convention `InvokeAsync`. Calling by convention makes the function extremely flexible as the parameters are not fixed. The function then accept an arbitrary number of parameters.
 
+For example we will be creating a `CompanyList` View component:
 
+```
+public class CompanyListViewComponent : ViewComponent
+{
+    public Task<IViewComponentResult> InvokeAsync(int count)
+    {
+        var items = new List<Company> {
+                new Company {
+                    Name = "ABC"
+                },
+                new Company {
+                    Name = "HELLO"
+                },
+                new Company {
+                    Name = "WORLD"
+                },
+                new Company {
+                    Name = "BYE"
+                }
+        }
+        .Take(count)
+        .ToList();
+
+        return Task.FromResult((IViewComponentResult)View(items));
+    }
+}
+```
+
+Then from a Razor view we can invoke the component by calling the static function `Component.InvokeAsync(...)`:
+
+```
+@await Component.InvokeAsync("CompanyList", new { count = 2 })
+```
+
+If we do need to serve the view component itself instead of a view, we can use the `ViewComponent(...)` function in the MVC controller:
+
+```
+public IActionResult Index()
+{
+    return ViewComponent("CompanyList", new { count = 1 });
+}
+```
 
 ## 4. Tag helpers
 
@@ -280,3 +322,7 @@ Workaround: Install the Razor Language Service extension.
 Source: [https://github.com/aspnet/Tooling/blob/master/known-issues-vs2017.md#tag-helpers-do-not-work](https://github.com/aspnet/Tooling/blob/master/known-issues-vs2017.md#tag-helpers-do-not-work)
 
 If it is the case for you, install the VS extension for Razor [https://marketplace.visualstudio.com/items?itemName=ms-madsk.RazorLanguageServices](https://marketplace.visualstudio.com/items?itemName=ms-madsk.RazorLanguageServices).
+
+# Conclusion
+
+Today we discovered the syntax and features offered by Razor. Using Razor to build static pages is straight forward and the new add-ons of tag helpers and view components are here to allow us to build larger application with better isolation of reusable view parts by embracing a component based architecture model. Hope you enjoyed this post, if you have any question leave it here or hit me on Twitter [@Kimserey_Lam](https://twitter.com/Kimserey_Lam).See you next time!
