--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -1,6 +1,6 @@
 # Razor syntax and helpers
 
-Razor is a html template which allows us to construct pieces of html components by combining data and html markup. The power of Razor reside in its typesafety. It allows us to directly use our C# models in the templates and call functions we had defined in our controllers. Together with intellisense, it is quick way to build simple UI.
+Razor is a HTML templating engine which allows us to construct HTML pages from a combination of data and HTML markup. The power of Razor resides in its typesafety and support for well known operators, conditional `if` `else` and iterators `for` `while` `foreach`. It allows us to directly use our C# models in the templates and call functions accessible by the view. Together with intellisense, it is quick way to build UI.
 Today we will explore some of the features from Razor:
 
 ```
