--- a/20170603_ngmodule.md
+++ b/20170603_ngmodule.md
@@ -50,8 +50,59 @@ Lastly we are __providing__ a service, `SquareService` which we have defined our
 
 # 2. Imports
 
-`Imports` in NgModule is an array of module. Use it to import 
+`Imports` in NgModule is an array of module. Use it to import functionalities which other modules export.
 
 # 3. Exports
+
+`Exports` is an array of functionalities which the module exports.
+A module can also re-export an entire loaded module which then export all the functionality of that module.
+
+For example here in (1) we imported `CommonModule`. Now let say we had a `SharedModule` with common functionalities like so:
+
+```
+import { CommonModule } from '@angular/common';
+import { NgModule } from '@angular/core';
+
+import { HighlightDirective } from './highlight.directive';
+
+@NgModule({
+  imports: [
+    CommonModule
+  ],
+  declarations: [
+    HighlightDirective
+  ],
+  exports: [
+    HighlightDirective,
+    CommonModule
+  ]
+})
+export class SharedModule { }
+```
+
+Notice that we are exporting the `CommonModule`. By doing that, whoever is importing `SharedModule` will not need to import `CommonModule` as it will be imported thanks to `SharedModule`.
+
+So we can change (1) to the following:
+
+```
+@NgModule({
+  imports: [
+    SharedModule
+  ],
+  declarations: [
+    SquareComponent
+  ],
+  exports: [
+    SquareComponent
+  ],
+  providers: [
+    SquareService
+  ]
+})
+export class SquareModule { }
+```
+
+This technique can be used to import & export multiple modules which are repeatedly imported in different modules.
+
 # 4. Declarations
 # 5. Providers
