--- a/20170603_ngmodule.md
+++ b/20170603_ngmodule.md
@@ -103,6 +103,40 @@ export class SquareModule { }
 ```
 
 This technique can be used to import & export multiple modules which are repeatedly imported in different modules.
+It is also possible to re-export specific components, directives or pipes from imported module. This could be useful if you do not wish to re-export the whole functionalities of a module.
 
 # 4. Declarations
+
+`Declarations` is an array of either __components__, __directives__ or __pipes__.
+They are classes defined in the module. They need to be `declared` to be usable within the module itself.
+
+For example here we have defined `SquareComponent` in `SquareModule` and `HighlightDirective` in `SharedModule`.
+
+Do not declare modules or services in the declarations.
+
 # 5. Providers
+
+`Providers` are used to provide services or connstants via dependecy injection.
+
+_For dependency injection, more can be found in the [official documentation](https://angular.io/docs/ts/latest/guide/dependency-injection.html#!#register-providers-ngmodule)._
+
+In this example, we have defined a service which can be injected.
+
+```
+import { Injectable } from '@angular/core';
+
+@Injectable
+export class SquareService {
+  computeSurface = (side: number) => side * side;
+}
+```
+
+Which we then register in the providers.
+
+```
+providers: [
+    SquareService
+]
+```
+
+This is a shortform the following registration `{ provide: SquareService, useClass: SquareService }`.
