more on service provider

--- a/20170603_ngmodule.md
+++ b/20170603_ngmodule.md
@@ -12,7 +12,7 @@ So today I will go through each attributes and provide an explanation together w
 5. Providers
 ```
 
-# 1. How does a NgModule declaration look like?
+## 1. How does a NgModule declaration look like?
 
 Angular utilises the typescript decorators to define `NgModule`.
 It accepts `imports`, `declarations`, `exports` and `providers`.
@@ -48,11 +48,11 @@ Then we are __declaring__ the `SquareComponent` which is a component defined by 
 Then we are __exporting__ it, so that other modules who import `SquareModule` can use the `SquareComponent`.
 Lastly we are __providing__ a service, `SquareService` which we have defined ourselves and make it avaible for dependency injection. 
 
-# 2. Imports
+## 2. Imports
 
 `Imports` in NgModule is an array of module. Use it to import functionalities which other modules export.
 
-# 3. Exports
+## 3. Exports
 
 `Exports` is an array of functionalities which the module exports.
 A module can also re-export an entire loaded module which then export all the functionality of that module.
@@ -105,7 +105,7 @@ export class SquareModule { }
 This technique can be used to import & export multiple modules which are repeatedly imported in different modules.
 It is also possible to re-export specific components, directives or pipes from imported module. This could be useful if you do not wish to re-export the whole functionalities of a module.
 
-# 4. Declarations
+## 4. Declarations
 
 `Declarations` is an array of either __components__, __directives__ or __pipes__.
 They are classes defined in the module. They need to be `declared` to be usable within the module itself.
@@ -114,7 +114,7 @@ For example here we have defined `SquareComponent` in `SquareModule` and `Highli
 
 Do not declare modules or services in the declarations.
 
-# 5. Providers
+## 5. Providers
 
 `Providers` are used to provide services or connstants via dependecy injection.
 
@@ -139,4 +139,68 @@ providers: [
 ]
 ```
 
-This is a shortform the following registration `{ provide: SquareService, useClass: SquareService }`.
+This is a shortform the following registration:
+
+```
+{ provide: SquareService, useClass: SquareService }
+```
+
+
+### Provider alias
+
+{ provide: Service, useClass: Service2 }
+
+If we want to be able to inject Service2 but need the same instance when injecting Service:
+
+[ Service2,
+ { provide: Service, useExisting: service2 } ]
+
+
+### Value providers
+
+```
+class Settings {
+  apiUrl: string;
+}
+
+let settings = {
+  apiUrl = "test";
+}
+```
+
+```
+{ provide: Settings, useValue: settings }
+```
+
+### Factory providers
+
+```
+let squareServiceFactory = (logger: Logger) => {
+  return new SqaureService(logger);
+}
+
+export let squareServiceProvider = 
+  { provider: SquareService,
+    userFactory: squareServiceFactory,
+    desp: [ Logger ] }
+```
+
+```
+providers: [squareServiceProvider]
+```
+
+### InjectionToken
+
+```
+import { InjectionToken } from '@angular/core';
+
+export let APP_CONFIG = new InjectionToken<AppConfig>('app.config');
+```
+
+`app.config` is a description used for the string representation of the injection token.
+
+We can see it in the [source code of Angular](https://github.com/angular/angular/blob/master/packages/core/src/di/injection_token.ts):
+
+```
+toString(): string { return `InjectionToken ${this._desc}`; }
+```
