--- a/20170603_ngmodule.md
+++ b/20170603_ngmodule.md
@@ -145,6 +145,17 @@ This is a shortform the following registration:
 { provide: SquareService, useClass: SquareService }
 ```
 
+Providers can be of the following types:
+
+```
+export declare type Provider = 
+  TypeProvider 
+  | ValueProvider 
+  | ClassProvider 
+  | ExistingProvider 
+  | FactoryProvider 
+  | any[];
+```
 
 ### Provider alias
 
@@ -174,31 +185,67 @@ let settings = {
 
 ### Factory providers
 
+It is also possible to register a factory to provide services.
+This can be used to provide computed values in the service constructor.
+
+For example we could define the following factory:
+
 ```
 let squareServiceFactory = (logger: Logger) => {
-  return new SqaureService(logger);
+  return new SquareService(logger);
 }
+```
 
+Then we can create a `FactoryProvider`:
+
+```
 export let squareServiceProvider = 
-  { provider: SquareService,
-    userFactory: squareServiceFactory,
-    desp: [ Logger ] }
+  { provide: SquareService,
+    useFactory: squareServiceFactory,
+    deps: [ Logger ] }
 ```
 
+Notice the `deps` (dependencies) which is a list of provided dependencies.
+
+Lastly we can register `squareServiceProvider` in our providers:
+
 ```
-providers: [squareServiceProvider]
+providers: [ squareServiceProvider ]
 ```
 
 ### InjectionToken
 
+So far we have used classes to provide a service.
+For `ValueProvider`, we provided the class to retrieve the value but in event where we don't have a class, for example if we have an interface, what can we do?
+Interfaces are typescript invention. They help the compiler but when turned to JS, they are removed.
+Therefore since the classes are used to figure out what service to provide, we need a way to register those values without classes.
+That is what the `InjectionToken` is for.
+
 ```
 import { InjectionToken } from '@angular/core';
+
+export interface AppConfig {
+  Test: string;
+}
 
 export let APP_CONFIG = new InjectionToken<AppConfig>('app.config');
 ```
 
-`app.config` is a description used for the string representation of the injection token.
+Here we have an interface with a `Test` member. We can define a `InjectionToken` which we can then use to register the service.
 
+```
+providers: [{ provide: APP_CONFIG, useValue: { Test: 'Hello world' } }]
+```
+
+Lastly we ca then inject the value using the `InjectionToken` using the `@Inject()` decorator like so:
+
+```
+constructor(@Inject(APP_CONFIG) config: AppConfig) {
+  this.title = config.title;
+}
+```
+
+__Note:__ `app.config` is a description used for the string representation of the injection token.
 We can see it in the [source code of Angular](https://github.com/angular/angular/blob/master/packages/core/src/di/injection_token.ts):
 
 ```
