--- a/20170603_ngmodule.md
+++ b/20170603_ngmodule.md
@@ -12,6 +12,8 @@ So today I will go through each attributes and provide an explanation together w
 5. Providers
 ```
 
+The full source code is available on my GitHub [https://github.com/Kimserey/ng-samples](https://github.com/Kimserey/ng-samples).
+
 ## 1. How does a NgModule declaration look like?
 
 Angular utilises the typescript decorators to define `NgModule`.
@@ -251,3 +253,10 @@ We can see it in the [source code of Angular](https://github.com/angular/angular
 ```
 toString(): string { return `InjectionToken ${this._desc}`; }
 ```
+
+# Conclusion
+
+Today we saw what NgModule are composed of. We seen what were the purpose of the imports, exports, declarations and providers.
+We have also seen multiple way to provide services and values using the different type of provider.
+Hope you enjoy this post as much as I enjoyed writing it. If you have any questions, leave it here or hit me on Twitter [https://twitter.com/Kimserey_Lam](https://twitter.com/Kimserey_Lam).
+See you next time!
