--- a/20170603_ngmodule.md
+++ b/20170603_ngmodule.md
@@ -1,4 +1,4 @@
-# How does NgModule works in Angular
+# How does NgModule work in Angular
 
 The first time I saw the NgModule decorator and its arguments I was completely lost. 
 I couldn't understand what was the meaning of imports, declarations, exports, providers or bootstrap and I had a hard time finding clear explanations. 
@@ -161,15 +161,26 @@ export declare type Provider =
 
 ### Provider alias
 
-{ provide: Service, useClass: Service2 }
+Instead of using the class, it is possible to provide a different alias to a provider.
 
+```
+{ provide: Service, useClass: Service2 }
+```
+
+This could be useful when we have a new service which will be replacing an old one but still have component referencing the old one.
 If we want to be able to inject Service2 but need the same instance when injecting Service:
 
-[ Service2,
- { provide: Service, useExisting: service2 } ]
-
+```
+[ 
+  Service2,
+  { provide: Service, useExisting: service2 } 
+]
+```
 
 ### Value providers
+
+We can also directly provide values.
+This can be achieved using `useValue` instead of `useClass` which creates a `ValueProvider`. 
 
 ```
 class Settings {
@@ -180,6 +191,8 @@ let settings = {
   apiUrl = "test";
 }
 ```
+
+We then register it the same way as other providers:
 
 ```
 { provide: Settings, useValue: settings }
