--- a/20170622_ng_router.md
+++ b/20170622_ng_router.md
@@ -1,28 +1,195 @@
-Import RouteModule and Routes
+# How to use the Angular Router
 
-Define routes and import RouteModule.forRoot(routes)
+Today we will see how to use the Angular Router. The router allows us to define routes which are transformed to urls which are then understood by the browser. Having routes allows us to create different categories and access points to our website. This post will be composed by 4 parts:
 
-Component is displayed after router-outlet
+1. Define routes
+2. Router outlet
+3. Special routes
+4. Data and ActivatedRoute
 
-RouterLink can take array
-Bind one time routerLink=x or dynamic [routerLink]=x
+## 1. Define routes
 
-RouterLinkActive=active
-Active is the class used on the element when active.
+To start, we need to import the `RouteModule` and the `Routes` type from the Angular router.
 
-Route are relative paths
+```
+import { RouterModule, Routes } from '@angular/router';
+```
 
-Path: ''
-RedirectTo: '/my-page'
-PathMatch: 'full'
+The routes are defined via constant and then injected into the router module using either `forRoot` or `forChild`.
 
-Means if the whole path matches it will redirect.
+`forRoot` is used to define routes on the main module and `forChild` is used to define routes on the child modules 
 
-PathMatching sets the router route identification behaviour.
+For example we can define two routes which we add to the main module:
 
-There are two types prefix and full. Prefix being the default we only need to specify when we want the matching to be full.
+```
+const routes: Routes = [
+  {
+    path: 'home',
+    component: MainPageComponent,
+  },
+  {
+    path: '',
+    redirectTo: 'home',
+    pathMatch: 'full'
+  }
+];
 
-Route technique
+@NgModule({
+  imports: [
+    BrowserModule,
+    RouterModule.forRoot(routes),
+    OnePageModule,
+  ],
+  declarations: [
+    AppComponent,
+    MainPageComponent
+  ],
+  bootstrap: [
+    AppComponent
+  ]
+})
+export class AppModule { }
+```
 
-Route component
-Empty route for default route on the main route
+Here two routes are defined, `/home` which will display `HomePageComponent` and `/` which will redirect to `home`.
+The routes are then added to the route module with `RouterModule.forRoot(routes)`.
+
+## 2. Router outlet
+
+The `HomePageComponent` will be displayed below the `router-outlet` tag.
+Our main `AppComponent` template is as followed:
+
+```
+<a routerLink="/main" routerLinkActive="active">Home</a>
+
+<router-outlet></router-outlet>
+```
+
+Component is displayed after `router-outlet`. `routerLink` is used to specify the link, it can be specified as a relative path or full path.
+`routerLink="test"` will add to the current path while `routerLink="/test"` will replace the path. For example if the current path is `/hello`, `="test"` will result in `/hello/test` while `="/test"` will result in `/test`.
+`routerLinkActive="active"` defines the class which will be added to the element when the route is active.
+
+The `router-outlet` accepts a name. This can be used to display components side by side. For example we define a route `my-page` and two outlet `first` and `second`, a possible route could be as followed:
+
+```
+/my-page/(first:x/y/z//second:a/b/c)
+```
+
+The two outlets maintain relative paths `first:x/y/z` and `second:a/b/c`, separated by a double slash `//`. This is very powerful as it gives a unique route for any permutation of the side by side components.
+The `routeLink` would be defined like so:
+
+```
+myRoute = [
+'/one-page',
+{
+    outlets: {
+        first: ['x','y','z'],
+        second: ['a','b','c']
+    }
+}];
+```
+
+## 3. Special routes
+
+### 3.1 Redirect
+
+In 1) we saw the following route:
+
+```
+  {
+    path: '',
+    redirectTo: '/home',
+    pathMatch: 'full'
+  }
+```
+
+`redirectTo` will redirect to `/home`. In order to redirect properly, we need to specify the `pathMatch`. There are two types `prefix` and `full`. `Prefix` being the default we only need to specify when we want the matching to be `full`. `full` will match the full remaining path while `prefix` will match the path which starts with the path given. `''` being the prefix of all paths, if we set `prefix` it will always redirect.
+
+### 3.2 Wildcard
+
+Another special route is the wildcard. It can be defined using the path `path:'**'`. For example here we can define the following under the `one-page` route:
+
+```
+{
+    path: 'one-page',
+    component: OnePageComponent,
+    children: [
+        {
+            path: '',
+            component: SecondPageComponent
+        },
+        {
+            path: '**',
+            redirectTo: '',
+            pathMatch: 'full'
+        }
+    ]
+},
+```
+
+Any route after `one-page` that aren't `''` will be redirected to `''` which will then result in `/one-page`.
+
+## 4. Data and ActivatedRoute
+
+### 4.1 Static data
+
+Static data can be configured in the route.
+
+```
+{
+    path: '',
+    component: MyComponent,
+    data: {
+        hello: 'world'
+    }
+}
+``` 
+
+Then in `MyComponent`, we can access those data via the `ActivatedRoute`. The data are held in an observable. We can access it as followed:
+
+```
+@Component({
+  template: `
+    <strong>{{ data$ | async }}</strong>
+  `
+})
+export class MyComponent implements OnInit {
+  data$: Observable<any>;
+
+  constructor(private route: ActivatedRoute) {}
+
+  ngOnInit() {
+    this.data$ = this.route.data.pluck('hello');
+  }
+}
+```
+
+### 4.2 Parameters
+
+Similarly to the data, parameters can be extracted from the route using the notation `:parameter` and accessed via the `ActivatedRoute`:
+
+```
+{
+    path: ':id',
+    component: MyComponent,
+}
+```
+
+```
+export class MyComponent implements OnInit {
+  data$: Observable<string>;
+
+  constructor(private route: ActivatedRoute) {}
+
+  ngOnInit() {
+    this.data$ = this.route
+        .paramMap
+        .filter(m => m.has('id'))
+        .map(m => m.get('id'));
+  }
+}
+```
+
+# Conclusion
+
+In this post we saw how we could use the Angular router and configure routes. We learnt how to configure the different type of routes including the wildcard route and different configurations available like the redirects. We also learnt how to provide routes to side by side components with outlets. Lastely we learnt how to define static data and how to pass parameters into the URL and retrieve it using the activated route object which we can inject in our components. Hope you like this post, if you have any question leave it here or hit me on Twitter [@Kimserey_Lam](). See you next time!
