--- a/20170622_ng_router.md
+++ b/20170622_ng_router.md
@@ -1,11 +1,12 @@
 # How to use the Angular Router
 
-Today we will see how to use the Angular Router. The router allows us to define routes which are transformed to urls which are then understood by the browser. Having routes allows us to create different categories and access points to our website. This post will be composed by 4 parts:
+Today we will see how to use the Angular Router. The router allows us to define routes which are transformed to urls which are then understood by the browser. Having routes allows us to create different categories and access points to our website. This post will be composed by 5 parts:
 
 1. Define routes
 2. Router outlet
 3. Special routes
 4. Data and ActivatedRoute
+5. Resolve guard
 
 ## 1. Define routes
 
@@ -186,6 +187,77 @@ export class MyComponent implements OnInit {
         .paramMap
         .filter(m => m.has('id'))
         .map(m => m.get('id'));
+  }
+}
+```
+
+## 5. Resolve guard
+
+Other than resolving static data using `data`, there are instances where it is desired to retrieve asynchronous data when accessing a page. In order to achieve that we can use the `resolve` guard.
+
+It is an interface to implement on a service:
+
+```
+interface Resolve { 
+  resolve(route: ActivatedRouteSnapshot, state: RouterStateSnapshot): 
+    Observable<T>|Promise<T>|T
+}
+```
+
+We can see that it accepts an `Obersvable`, a `Promise` or a concrete type `T`. 
+For example we could have a title which requires dynamic data:
+
+```
+@Injectable()
+export class TitleResolver implements Resolve<string> {
+
+  resolve(route: ActivatedRouteSnapshot, state: RouterStateSnapshot): Promise<string> {
+    return Observable
+      .of('An async title')
+      .delay(5000);
+  }
+}
+```
+
+Then we will need to register this service in the module:
+
+```
+@NgModule({
+  imports: [...],
+  declarations: [...],
+  providers: [
+    TitleResolver
+  ]
+})
+export class MyModule { }
+```
+
+We can then add the resolver into the route configuration and define a variable `myTitle` to place the result in. We will then be able to access this variable from the `data`.
+
+```
+const routes: Routes = [
+  {
+    path: 'my-route',
+    component: MyComponent,
+    resolve: {
+      myTitle: TitleResolver
+    }
+  }
+];
+```
+
+This will ensure that the title is resolved before the compononent is shown. We can then use the resolved value by plucking it out of the data. We can be sure that at least one value will be resolved from the `myTitle` variable.
+
+```
+export class OnePageComponent implements OnInit {
+  title$: Observable<string>;
+
+  constructor(private route: ActivatedRoute) { }
+
+  ngOnInit() {
+    this.title$ = this.route
+      .data
+      .pluck('myTitle');
   }
 }
 ```
